# Web

./: .gitignore  Cargo.toml  README.md
src/: database.rs  handler.rs  main.rs  model.rs  models.rs  response.rs
src/static/: index.html  script.js  style.css
