[package]
name = "Winklink-Web-API"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
argon2 = "0.5.3"
chrono = { version = "0.4.41", features = ["serde"] }
jsonwebtoken = "9.3.1"
libsql = "0.9.6"
log = "0.4.27"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["default", "full"] }
uuid = { version = "1.16.0", features = ["v4"] }
warp = "0.3.7"
